# dusk

./: .gitignore  CMakeLists.txt  README.md
include/: camera.h++
include/io/: obj_loader.h++
include/math/: Mat4.h++  Vec2.h++  Vec3.h++
include/model/: vector_model.h++
include/objects/: cube.h++  planet.h++  ship.h++  star.h++
include/rendering/: cube_renderer.h++  hud_renderer.h++  planet_renderer.h++  projector.h++  ship_renderer.h++  star_renderer.h++
include/scenes/: default_scene.h++  first_test_scene.h++  main_menu.h++  scene.h++  scene_manager.h++  two_planet_scene.h++
include/systems/: ship_physics.h++
include/tools/: camera.h++  camera_controller.h++  ship_controller.h++
include/world/: starfield.h++  world.h++
src/: main.cpp
